# abyss-bot

./: .gitignore  Cargo.toml  README.md  build.rs
assets/database/: create_user_if_not_exist.sql
src/: commands.rs  delver.py  error.rs  event_handler.rs  main.py  main.rs  server.py  util.rs
src/commands/: info.rs  ping.py
